...
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zola.bmi.BMIMain$PlaceholderFragment">

    <EditText
        android:id="@+id/weightNum"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="32dp"
        android:contentDescription="weightNum"
        android:ems="6"
        android:inputType="number|numberDecimal"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/heightNum"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weightNum"
        android:layout_alignEnd="@+id/calcBMI"
        android:layout_alignRight="@+id/calcBMI"
        android:layout_marginTop="32dp"
        android:contentDescription="heightNum"
        android:ems="6"
        android:inputType="number|numberDecimal"
        android:textSize="20dp" />
...
        android:layout_below="@+id/heightNum"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="19dp"
        android:contentDescription="calcBMI"
        android:onClick="calculateClickHandler"
        android:text="Calculate BMI"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calcBMI"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="resultLbl"
        android:text="@string/EmptyString"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/weightSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/heightNum"
        android:layout_alignTop="@+id/weightNum"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/weightNum"
        android:contentDescription="weightSpin"
        android:entries="@array/weightSpinnerString" />

    <Spinner
        android:id="@+id/heightSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calcBMI"
        android:layout_alignTop="@+id/heightNum"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
...
