<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/decrementButton"
        style="@style/decrement_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="decrementButton"
        android:elevation="20dp"
        android:text="@string/minus" />

    <Button
        android:id="@+id/incrementButton"
        style="@style/increment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/decrementButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/incrementbutton"
        android:elevation="10dp"
        android:text="@string/plus" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/incrementButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/FrameLayout1">

        <TextView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/counterLabel"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="?valueColor"
            android:contentDescription="@string/counterLabel"
            app:autoSizeMaxTextSize="300sp"
            app:autoSizeMinTextSize="20sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform" />
    </FrameLayout>

</RelativeLayout>
